# Programming-Massively-Parallel-Processors-A-Handson-Approach

./: README.md  ViT beginer.ipynb
Chapter 2 Heterogeneous data parallel computing/: CMakeLists.txt  device  device.run  device_vector_addition_gpu.cu  host.run  host_vector_addition_cpu.cu
Chapter 3 Multidimensional grids and data/: CMakeCache.txt  CMakeLists.txt  ColoredImageToGrayscale.cu  ColoredImageToGrayscale.h  Makefile  cmake_install.cmake  main.cpp  run  run.out
Chapter 3 Multidimensional grids and data/ColoredToGray/: CMakeLists.txt  ColoredImageToGrayscale.cu  ColoredImageToGrayscale.h  main.cpp
Chapter 3 Multidimensional grids and data/Example/ColoredToGray/: ColoredImageToGrayscale.cu
Chapter 3 Multidimensional grids and data/Example/ImageBlur/: BlurImage.cu  BlurImage.h  CMakeLists.txt  main.cpp
Chapter 3 Multidimensional grids and data/Example/MatrixMultiplication/: CMakeLists.txt  MatrixMultiplication.cu  MatrixMultiplication.h
Chapter 3 Multidimensional grids and data/Exercise/1/: CMakeLists.txt  MatrixMultiplication.h  MatrixMultiplicationColumn.cu  MatrixMultiplicationRow.cu  main.cpp
Chapter 3 Multidimensional grids and data/Exercise/2/: CMakeLists.txt  MatrixVectorMultiplication.cu  MatrixVectorMultiplication.h  main.cpp
Chapter 3 Multidimensional grids and data/MatrixMultiplication/: main.cpp
Chapter 4 Compute architecture and scheduling/: get_gpu_resource.cu  run
cv/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
testcuda/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  medianFilter.cu  medianFilter.h  test_app
